[tool.poetry]
name = "data-structures"
version = "0.1.0"
description = "Implementation of data structures in Python."
authors = ["Kenneth Lareau <elessar@numenor.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "linked_list", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
pytest = "^7.1.3"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
